--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
         <item>название сервиса</item>
         <item>имя и фамилия</item>
     </string-array>
+    <string name="title_activity_picked_comment">PickedComment</string>
 
 
 </resources>
