Переделан процесс регистрации и входа, удалён пароль

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,6 @@
         <item>имя и фамилия</item>
     </string-array>
     <string name="title_activity_picked_comment">PickedComment</string>
-
+    <string name="saveData">Сохранить данные</string>
 
 </resources>
