--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,7 @@
     </string-array>
     <string name="title_activity_picked_comment">PickedComment</string>
     <string name="saveData">Сохранить данные</string>
+    <string name="subscribed"><![CDATA[<B]]></string>
+    <string name="name">Name</string>
 
 </resources>
