--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,16 @@
         <item>название сервиса</item>
         <item>имя и фамилия</item>
     </string-array>
+
+    <string-array name="category">
+        <item>Выбрать категорию</item>
+        <item>ногти</item>
+        <item>волосы</item>
+        <item>глаза</item>
+        <item>визаж</item>
+        <item>массаж</item>
+    </string-array>
+
     <string name="title_activity_picked_comment">PickedComment</string>
     <string name="saveData">Сохранить данные</string>
     <string name="subscribed"><![CDATA[<B]]></string>
