--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     //registration
     <string name="nameRegistration">Имя</string>
-    <string name="surnameRegistration">Фамилия</string>
+    <string name="surname">Фамилия</string>
     <string name="cityRegistration">Город</string>
     <string name="phoneRegistration">Номер телефона</string>
     <string name="passwordRegistration">Пароль</string>
@@ -33,7 +33,7 @@
     <string name="hello_blank_fragment">hello blank fragment</string>
     <string name="status_worker">worker</string>
     <string name="empty_field">Не все поля заполнены</string>
-    <string name="defult_value">-</string>
+    <string name="default_value">-</string>
     <string name="empty_phone_field">Поле с номером телефона не может быть пустым</string>
     <string name="resendCode">Отправить код снова</string>
     <string name="verifyCode">Подтвердить код</string>
