уведомления для разных событий

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="Dialogs">Диалоги</string>
     <string name="rate">Оценить</string>
     <string name="deleteService">Удалить</string>
+    <string name="channel_name">q</string>
+    <string name="channel_description">qq</string>
 
     //array for spinner
     <string-array name="cities">
