добавлен background в pak logIn, изменены цвета у панелей

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,11 @@
     <string name="channel_name">q</string>
     <string name="channel_description">qq</string>
 
+    //bottom panel
+    <string name="chat">\uf075</string>
+
+
+
     //array for spinner
     <string-array name="cities">
         <item>Не выбран</item>
