почти сделан MS, сделан GS, на очердени EP, фикс багов

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,5 +88,6 @@
     <string name="saveData">Сохранить данные</string>
     <string name="subscribed"><![CDATA[<B]]></string>
     <string name="name">Name</string>
+    <string name="change_number"><u>Именить номер</u></string>
 
 </resources>
