верстка подписчиков и ES

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="phone">Телефон</string>
 
     //Edit service
-    <string name="edit">Изменить</string>
+    <string name="save">Сохранить</string>
 
     //Edit profile
 
