--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
 
     //array for spinner
     <string-array name="cities">
-        <item><b>Не выбран</b></item>
+        <item><b>не выбран</b></item>
         <item><b>dubna</b></item>
         <item><b>dmitrov</b></item>
         <item><b>taldom</b></item>
@@ -63,8 +63,8 @@
     </string-array>
 
     <string-array name="searchBy">
-        <item><b>Название сервиса</b></item>
-        <item><b>Имя и фамилия</b></item>
+        <item><b>название сервиса</b></item>
+        <item><b>имя и фамилия</b></item>
     </string-array>
 
     <string-array name="category">
