--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,6 @@
     <string name="saveData">Сохранить данные</string>
     <string name="subscribed"><![CDATA[<B]]></string>
     <string name="name">Name</string>
-    <string name="change_number"><u>Именить номер</u></string>
+    <string name="change_number">Изменить номер</string>
 
 </resources>
