start profile refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
 
     //Add service
     <string name="nameAddServiceTB">Имя</string>
-    <string name="costAddServiceTB">Цена</string>
+    <string name="cost">Цена</string>
     <string name="main_screen">Главная страница</string>
     <string name="phone">Телефон</string>
 
