--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,13 +72,8 @@
     </string-array>
 
     <string-array name="countryCode">
-        <item><b><font android:color="@color/white">+7</font></b></item>
-        <item><b><font android:color="@color/white">+1</font></b></item>
-    </string-array>
-
-    <string-array name="countryCodeForEditService">
-        <item><b><font android:color="@color/black">+7</font></b></item>
-        <item><b><font android:color="@color/black">+1</font></b></item>
+        <item>+7</item>
+        <item>+1</item>
     </string-array>
 
     <string name="title_activity_picked_comment">PickedComment</string>
